--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,21 @@
 {
   "configurations": [
     {
-      "name": "Launch Package",
-      "type": "go",
-      "request": "launch",
-      "mode": "auto",
-      "program": "${fileDirname}",
-    },
-    {
-      "name": "Connect To Server",
+      "name": "Connect to localhost",
       "type": "go",
       "request": "attach",
       "mode": "remote",
       "host": "localhost",
-      "port": 2345,
+      "port": 56268,
       "cwd": "${workspaceFolder}",
       "remotePath": "/workspace",
+    },
+    {
+      "name": "Launch current package",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${fileDirname}",
     },
   ]
 }
