--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -34,6 +34,8 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: "1.19"
+      - name: Install golangci-lint
+        run: brew install golangci-lint
       - name: Install Skaffold
         run: brew install skaffold
       - name: Install Container Structure Tests
@@ -41,8 +43,10 @@ jobs:
 
       - name: Format Go code
         run: go fmt ./...
-      - name: Lint Go code
+      - name: Vet Go code
         run: go vet ./...
+      - name: Lint Go code
+        run: golangci-lint run ./...
       - name: Test Go code
         run: go test -v ./...
 
