--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -20,65 +20,64 @@ jobs:
     env:
       SKAFFOLD_DEFAULT_REPO: ghcr.io/damlys
     steps:
-      # - name: Set Git user
-      #   run: |
-      #     git config --global user.name "github-actions"
-      #     git config --global user.email "github-actions@github.com"
-      # - name: Clone Git repository
-      #   uses: actions/checkout@v3
-      # - name: Login to GitHub Container Registry
-      #   uses: docker/login-action@v2
-      #   with:
-      #     registry: ghcr.io
-      #     username: "${{ github.actor }}"
-      #     password: "${{ secrets.GITHUB_TOKEN }}"
-      # - name: Install Go
-      #   uses: actions/setup-go@v3
-      #   with:
-      #     go-version: "1.19"
+      - name: Set Git user
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+      - name: Clone Git repository
+        uses: actions/checkout@v3
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: "${{ github.actor }}"
+          password: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Install Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: "1.19"
 
-      # - name: Cache brew
-      #   id: cache-brew
-      #   uses: actions/cache@v3
-      #   with:
-      #     key: ${{ runner.os }}-brew
-      #     path: xyz
+      - name: Cache brew
+        id: cache-brew
+        uses: actions/cache@v3
+        with:
+          key: linux-brew
+          path: |
+            /home/linuxbrew/.linuxbrew
+            ~/.linuxbrew
       - name: Install golangci-lint
-        # if: steps.cache-brew.outputs.cache-hit != 'true'
+        if: steps.cache-brew.outputs.cache-hit != 'true'
         run: brew install golangci-lint
       - name: Install skaffold
-        # if: steps.cache-brew.outputs.cache-hit != 'true'
+        if: steps.cache-brew.outputs.cache-hit != 'true'
         run: brew install skaffold
       - name: Install container-structure-test
-        # if: steps.cache-brew.outputs.cache-hit != 'true'
+        if: steps.cache-brew.outputs.cache-hit != 'true'
         run: brew install container-structure-test
-      - name: dump
-        run: |
-          ls -l ~/Library/Caches/Homebrew
 
-      # - name: Format Go code
-      #   run: go fmt ./...
-      # - name: Vet Go code
-      #   run: go vet ./...
-      # - name: Lint Go code
-      #   run: golangci-lint run ./...
-      # - name: Download Go dependencies
-      #   run: go mod download
-      # - name: Test Go code
-      #   run: go test -v ./...
+      - name: Format Go code
+        run: go fmt ./...
+      - name: Vet Go code
+        run: go vet ./...
+      - name: Lint Go code
+        run: golangci-lint run ./...
+      - name: Download Go dependencies
+        run: go mod download
+      - name: Test Go code
+        run: go test -v ./...
 
-      # - name: Build Docker images
-      #   run: skaffold build --file-output=skaffold-build-artifacts.json
-      # - name: Test Docker images
-      #   run: skaffold test --build-artifacts=skaffold-build-artifacts.json
+      - name: Build Docker images
+        run: skaffold build --file-output=skaffold-build-artifacts.json
+      - name: Test Docker images
+        run: skaffold test --build-artifacts=skaffold-build-artifacts.json
 
-      # - if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
-      #   name: Deploy to non-prod
-      #   env:
-      #     SKAFFOLD_DIGEST_SOURCE: tag
-      #   run: skaffold render --profile=dev
-      # - if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      #   name: Deploy to prod
-      #   env:
-      #     SKAFFOLD_DIGEST_SOURCE: tag
-      #   run: skaffold render --profile=prod
+      - if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
+        name: Deploy to non-prod
+        env:
+          SKAFFOLD_DIGEST_SOURCE: tag
+        run: skaffold render --profile=dev
+      - if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        name: Deploy to prod
+        env:
+          SKAFFOLD_DIGEST_SOURCE: tag
+        run: skaffold render --profile=prod
