--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -56,8 +56,9 @@ jobs:
         run: brew install container-structure-test
       - name: dump
         run: |
-          ls /home/linuxbrew/.linuxbrew
+          ls -la /home/linuxbrew/.linuxbrew
           brew --cache
+          su - linuxbrew -c "brew --cache"
 
       # - name: Format Go code
       #   run: go fmt ./...
