--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: "1.19"
-      - name: Cache Homebrew on Linux
+      - name: Cache Homebrew
         id: cache-homebrew
         uses: actions/cache@v3
         with:
