--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -44,13 +44,13 @@ jobs:
           path: /home/runner/.cache/Homebrew
       - name: Install golangci-lint
         # if: steps.cache-homebrew.outputs.cache-hit != 'true'
-        run: brew install golangci-lint
+        run: brew install --ignore-dependencies golangci-lint
       - name: Install Skaffold
         # if: steps.cache-homebrew.outputs.cache-hit != 'true'
-        run: brew install skaffold
+        run: brew install --ignore-dependencies skaffold
       - name: Install Container Structure Tests
         # if: steps.cache-homebrew.outputs.cache-hit != 'true'
-        run: brew install container-structure-test
+        run: brew install --ignore-dependencies container-structure-test
 
       - name: Format Go code
         run: go fmt ./...
