--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,12 @@ thumbs.db
 /*.code-workspace
 
 #############################
+### Docker
+#############################
+
+/docker-compose.override.yml
+
+#############################
 ### Kubernetes
 #############################
 
