--- a/.dockerignore
+++ b/.dockerignore
@@ -14,6 +14,8 @@
 ### IDE
 #############################
 
+**/.devcontainer
+**/.devcontainer.json
 **/.editorconfig
 **/.vscode
 **/*.code-workspace
