--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -17,8 +17,6 @@ on:
 jobs:
   job0:
     runs-on: ubuntu-22.04
-    env:
-      SKAFFOLD_DEFAULT_REPO: ghcr.io/damlys
     steps:
       - name: Set Git user
         run: |
@@ -36,6 +34,11 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: "1.19"
+      - name: Cache Homebrew
+        uses: actions/cache@v3
+        with:
+          key: "${{ runner.os }}-homebrew"
+          path: /home/runner/.cache/Homebrew
       - name: Install golangci-lint
         run: brew install golangci-lint
       - name: Install Skaffold
@@ -49,21 +52,25 @@ jobs:
         run: go vet ./...
       - name: Lint Go code
         run: golangci-lint run ./...
+      - name: Download Go dependencies
+        run: go mod download
       - name: Test Go code
         run: go test -v ./...
 
-      - name: Build Docker containers
+      - name: Build Docker images
         run: skaffold build --file-output=skaffold-build-artifacts.json
-      - name: Test Docker containers
+      - name: Test Docker images
         run: skaffold test --build-artifacts=skaffold-build-artifacts.json
 
       - if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
         name: Deploy to non-prod
         env:
+          SKAFFOLD_DEFAULT_REPO: ghcr.io/damlys
           SKAFFOLD_DIGEST_SOURCE: tag
         run: skaffold render --profile=dev
       - if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         name: Deploy to prod
         env:
+          SKAFFOLD_DEFAULT_REPO: ghcr.io/damlys
           SKAFFOLD_DIGEST_SOURCE: tag
         run: skaffold render --profile=prod
