--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,14 @@ thumbs.db
 /skaffold-build-artifacts.json
 
 #############################
+### SOPS
+#############################
+
+/deploy/goapp/overlays/prod/secret.env
+/deploy/goapp/overlays/prod/secret.json
+/deploy/goapp/overlays/prod/secret.txt
+
+#############################
 ### Go
 #############################
 
