--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -16,6 +16,9 @@ on:
       - "!**.md"
 jobs:
   job0:
+    permissions:
+      contents: "read"
+      id-token: "write"
     runs-on: ubuntu-22.04
     steps:
       - name: Set Git user
