--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,11 +1,6 @@
 apiVersion: skaffold/v2beta29
 kind: Config
 build:
-  local:
-    useDockerCLI: true
-    useBuildkit: false
-    push: false
-    tryImportMissing: false
   artifacts:
     - image: goapp
       docker:
@@ -21,6 +16,12 @@ profiles:
     activation:
       - command: dev
       - command: debug
+    build:
+      local:
+        useDockerCLI: true
+        useBuildkit: false
+        push: false
+        tryImportMissing: false
     deploy:
       kubeContext: docker-desktop
       kustomize:
@@ -28,7 +29,7 @@ profiles:
           - deploy/goapp/overlays/dev
   - name: prod
     deploy:
-      kubeContext: docker-desktop
+      kubeContext: gke_gomod-0_europe-central2_autopilot-cluster-1
       kustomize:
         paths:
           - deploy/goapp/overlays/prod
