--- a/deploy/charts/goapp/templates/http-server.deploy.yaml
+++ b/deploy/charts/goapp/templates/http-server.deploy.yaml
@@ -1,37 +1,42 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: "{{ .Release.Name }}"
+  name: "{{ .Release.Name }}-http-server"
   namespace: "{{ .Release.Namespace }}"
   labels:
+    app.kubernetes.io/component: "http-server"
     {{- include "goapp.metadataLabels" $ | nindent 4 }}
 spec:
-  replicas: {{ .Values.minReplicas }}
+  replicas: {{ .Values.httpServer.minReplicas }}
   strategy:
     type: RollingUpdate
   selector:
     matchLabels:
+      app.kubernetes.io/component: "http-server"
       {{- include "goapp.matchLabels" $ | nindent 6 }}
   template:
     metadata:
       labels:
+        app.kubernetes.io/component: "http-server"
         {{- include "goapp.metadataLabels" $ | nindent 8 }}
       annotations:
         prometheus.io/scrape: "false"
         prometheus.io/port: "http"
         prometheus.io/path: "/-/metrics"
-        checksum/config: >
-          {{ include (print .Template.BasePath "/cm.yaml") $ | sha256sum }}
-          {{ include (print .Template.BasePath "/secret.yaml") $ | sha256sum }}
+        checksum/config: {{ include "goapp.configChecksum" $ }}
     spec:
       containers:
-      - name: "{{ .Release.Name }}"
+      - name: http-server
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         envFrom:
         - configMapRef:
-            name: "{{ .Release.Name }}"
+            name: "{{ .Release.Name }}-config-envs"
         - secretRef:
-            name: "{{ .Release.Name }}"
+            name: "{{ .Release.Name }}-config-envs"
+        volumeMounts:
+        - name: config-files
+          mountPath: /run/secrets/goapp
+          readOnly: true
         ports:
         - name: http
           containerPort: 8080
@@ -56,3 +61,11 @@ spec:
           capabilities:
             drop:
               - CAP_CHOWN
+      volumes:
+      - name: config-files
+        projected:
+          sources:
+          - configMap:
+              name: "{{ .Release.Name }}-config-files"
+          - secret:
+              name: "{{ .Release.Name }}-config-files"
