--- a/deploy/charts/goapp/templates/http-server.hpa.yaml
+++ b/deploy/charts/goapp/templates/http-server.hpa.yaml
@@ -1,14 +1,15 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: "{{ .Release.Name }}"
+  name: "{{ .Release.Name }}-http-server"
   namespace: "{{ .Release.Namespace }}"
   labels:
+    app.kubernetes.io/component: "http-server"
     {{- include "goapp.metadataLabels" $ | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: "{{ .Release.Name }}"
-  minReplicas: {{ .Values.minReplicas }}
-  maxReplicas: {{ .Values.maxReplicas }}
+    name: "{{ .Release.Name }}-http-server"
+  minReplicas: {{ .Values.httpServer.minReplicas }}
+  maxReplicas: {{ .Values.httpServer.maxReplicas }}
