--- a/deploy/charts/goapp/templates/http-server.svc.yaml
+++ b/deploy/charts/goapp/templates/http-server.svc.yaml
@@ -1,13 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ .Release.Name }}"
+  name: "{{ .Release.Name }}-http-server"
   namespace: "{{ .Release.Namespace }}"
   labels:
+    app.kubernetes.io/component: "http-server"
     {{- include "goapp.metadataLabels" $ | nindent 4 }}
 spec:
   type: ClusterIP
   selector:
+    app.kubernetes.io/component: "http-server"
     {{- include "goapp.matchLabels" $ | nindent 4 }}
   ports:
   - name: http
