--- a/deploy/charts/goapp/values.yaml
+++ b/deploy/charts/goapp/values.yaml
@@ -2,17 +2,16 @@ image:
   repository: goapp
   tag: latest
 
-envs:
-  configMap: {}
-  #  USERNAME: ""
-  secret: {}
-  #  PASSWORD: ""
+configEnvs: {}
+secretEnvs: {}
+configFiles: {}
+secretFiles: {}
 
-minReplicas: 1
-maxReplicas: 1
+httpServer:
+  minReplicas: 1
+  maxReplicas: 1
 
-ingress:
-  annotations: {}
-  #  kubernetes.io/ingress.class: nginx
-  host: ""
-  path: /
+  ingress:
+    annotations: {}
+    host: ""
+    path: /
