--- a/deploy/releases/goapp-dev/values.yaml
+++ b/deploy/releases/goapp-dev/values.yaml
@@ -1,14 +1,31 @@
-envs:
-  configMap:
-    CONFIG_A: dev CONFIG_A
-    CONFIG_B: dev CONFIG_B
-  secret:
-    SECRET_A: dev SECRET_A
-    SECRET_B: dev SECRET_B
+configEnvs:
+  CONFIG_A: dev CONFIG_A
+  CONFIG_B: dev CONFIG_B
 
-ingress:
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
-    cert-manager.io/cluster-issuer: letsencrypt-staging
-  host: goapp-dev.gomod.damlys.dev
+secretEnvs:
+  SECRET_A: dev SECRET_A
+  SECRET_B: dev SECRET_B
+
+configFiles:
+  config.txt: |
+    dev config.txt
+  config.json: |
+    {
+      "data": "dev config.json"
+    }
+
+secretFiles:
+  secret.txt: |
+    dev secret.txt
+  secret.json: |
+    {
+      "data": "dev secret.json"
+    }
+
+httpServer:
+  ingress:
+    annotations:
+      kubernetes.io/ingress.class: nginx
+      kubernetes.io/tls-acme: "true"
+      cert-manager.io/cluster-issuer: letsencrypt-staging
+    host: goapp-dev.gomod.damlys.dev
