--- a/deploy/releases/goapp-prod/secrets.enc.yaml
+++ b/deploy/releases/goapp-prod/secrets.enc.yaml
@@ -1,18 +1,20 @@
-envs:
-    secret:
-        SECRET_A: ENC[AES256_GCM,data:xklMlLsNkoHVMoZuEA==,iv:jV2wYZ3hbPEudg2hUEzWSeEph5FbslSyIhCfb0hhopM=,tag:fMi7XvIVL3aBt1X1osKOAA==,type:str]
-        SECRET_B: ENC[AES256_GCM,data:4IEvgn1a6/usNWzLdQ==,iv:gJJe4uJsGC5Qs0WoV5EkJRZ7jDd5vrJMXsPymlCzQY0=,tag:LlhvcwsMmQTHRu8GCz6tJg==,type:str]
+secretEnvs:
+    SECRET_A: ENC[AES256_GCM,data:RWP4jCA5Q7+ufgk6Fw==,iv:yMbdVSRq3S8hM8naMNNXhLvuZ60aeuMeVUqfmzCwkjA=,tag:+30wnwae8RyJv1h/+kRr8Q==,type:str]
+    SECRET_B: ENC[AES256_GCM,data:aokvaO8/V2Eie/r+PA==,iv:L7SFzD5/yVB/naNeXEfUog7bWC1tzvD0zCLphVea3aI=,tag:qfL9cCukGLZ2xegb4W2itw==,type:str]
+secretFiles:
+    secret.txt: ENC[AES256_GCM,data:kScfi2154tMJ9fZefGwLwA==,iv:ttYg9nPBDBUZzjwlbqK5o9kzomudszU8hFgYR4GVfdE=,tag:12tlGXKeNKPZAt2uTe0fAg==,type:str]
+    secret.json: ENC[AES256_GCM,data:bR3Yfc6Yce3mkyiuzODnrAqqHglY+ITDGpsW0xbv8MvE,iv:5na9KsSeRZuRigGJxTMqTyuaThtAzwJVftqYcO20T+I=,tag:zgim7r2UUbFR0faGqdJq6w==,type:str]
 sops:
     kms: []
     gcp_kms:
         - resource_id: projects/gomod-0/locations/europe-central2/keyRings/sops/cryptoKeys/sops-key
-          created_at: "2022-08-30T09:17:37Z"
-          enc: CiQAalnlFru85Pi9E53uumAVojH0ifA5oGecb60vL+SAyBen9e8SSQCoyb//GjG6I9bcqgeBaKu3lYqsRKsT/ElsAjkJBC2yCHwyjohbqr90iSvehJarsjDXnaay+T/inkMJ0lROu4dPc3rTZAOVMoI=
+          created_at: "2022-08-30T10:29:33Z"
+          enc: CiQAalnlFrzriLVRkNeWieMrFc4ExIDOlxWeewdVTV+KUl+MgjwSSQCoyb//QBMfi7YekmKSEglr1nv9/7+6N6aZSoFmdTNXgGnXpoH7oEPyW0M5yM/XAgXXeVoAKUUVMec1yvTkCb0i8pOqZXMELX0=
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-08-30T09:17:38Z"
-    mac: ENC[AES256_GCM,data:ZefQ8+PjDpC4g+X2W/P+OiBZ+WTzGZT+lW1iRC6wE/qXPFeDmVC+NlREiNHt27b1ShmrLvq8lF9MRRI5Vn2GCom95CTpC0rbDJB2KrQiJ6ARdcfC8aQwy7vS1oHMak3ft7DxO2bPQqVqCT6+cX3b5gLjiJc2L0YKL+O7dE6VB4U=,iv:d1phMOrX4E9aE8Y93oUq+3tkSxvJaBLTlxx678AKy9k=,tag:aE2uUCHB47bgDMA3PxYkkA==,type:str]
+    lastmodified: "2022-08-30T10:29:33Z"
+    mac: ENC[AES256_GCM,data:H7YNpVKNpQgQh1iL6HCLWb5lm8r4UjMJBwu4B8yqMy4GlonMpwS1+tJ+mA/G34+/RtXerl03dDk1y7OY+snZ+8ivd5VkUilFhzJZEU635ccY6MICLnAC8++MtjJNt5KGqAgHI5TRGqYyKljOY06C/R8+wn+xMaPMFMBJZqW1dyk=,iv:A6MjA49KOZB6JKBp1xGeCSSQj67LAQhHmvfZFnqM5sA=,tag:8fbfyITlgjy5f3ENFNsZNw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
