--- a/deploy/releases/goapp-prod/values.yaml
+++ b/deploy/releases/goapp-prod/values.yaml
@@ -1,14 +1,22 @@
-envs:
-  configMap:
-    CONFIG_A: prod CONFIG_A
-    CONFIG_B: prod CONFIG_B
+configEnvs:
+  CONFIG_A: prod CONFIG_A
+  CONFIG_B: prod CONFIG_B
 
-minReplicas: 2
-maxReplicas: 3
+configFiles:
+  config.txt: |
+    prod config.txt
+  config.json: |
+    {
+      "data": "prod config.json"
+    }
 
-ingress:
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
-    cert-manager.io/cluster-issuer: letsencrypt-prod
-  host: goapp-prod.gomod.damlys.dev
+httpServer:
+  minReplicas: 2
+  maxReplicas: 3
+
+  ingress:
+    annotations:
+      kubernetes.io/ingress.class: nginx
+      kubernetes.io/tls-acme: "true"
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+    host: goapp-prod.gomod.damlys.dev
