--- a/deploy/charts/goapp/templates/http-server.svc.yaml
+++ b/deploy/charts/goapp/templates/http-server.svc.yaml
@@ -4,12 +4,12 @@ metadata:
   name: "{{ .Release.Name }}-http-server"
   namespace: "{{ .Release.Namespace }}"
   labels:
-    app.kubernetes.io/component: "http-server"
+    app.kubernetes.io/component: http-server
     {{- include "goapp.metadataLabels" $ | nindent 4 }}
 spec:
   type: ClusterIP
   selector:
-    app.kubernetes.io/component: "http-server"
+    app.kubernetes.io/component: http-server
     {{- include "goapp.matchLabels" $ | nindent 4 }}
   ports:
     - name: http
