--- a/deploy/charts/goapp/values.yaml
+++ b/deploy/charts/goapp/values.yaml
@@ -3,9 +3,9 @@ image:
   tag: latest
 
 configEnvs: {}
-secretEnvs: {}
+secretConfigEnvs: {}
 configFiles: {}
-secretFiles: {}
+secretConfigFiles: {}
 
 httpServer:
   minReplicas: 1
