--- a/deploy/releases/goapp-prod/secrets.enc.yaml
+++ b/deploy/releases/goapp-prod/secrets.enc.yaml
@@ -1,20 +1,20 @@
-secretEnvs:
-    SECRET_A: ENC[AES256_GCM,data:RWP4jCA5Q7+ufgk6Fw==,iv:yMbdVSRq3S8hM8naMNNXhLvuZ60aeuMeVUqfmzCwkjA=,tag:+30wnwae8RyJv1h/+kRr8Q==,type:str]
-    SECRET_B: ENC[AES256_GCM,data:aokvaO8/V2Eie/r+PA==,iv:L7SFzD5/yVB/naNeXEfUog7bWC1tzvD0zCLphVea3aI=,tag:qfL9cCukGLZ2xegb4W2itw==,type:str]
-secretFiles:
-    secret.txt: ENC[AES256_GCM,data:kScfi2154tMJ9fZefGwLwA==,iv:ttYg9nPBDBUZzjwlbqK5o9kzomudszU8hFgYR4GVfdE=,tag:12tlGXKeNKPZAt2uTe0fAg==,type:str]
-    secret.json: ENC[AES256_GCM,data:bR3Yfc6Yce3mkyiuzODnrAqqHglY+ITDGpsW0xbv8MvE,iv:5na9KsSeRZuRigGJxTMqTyuaThtAzwJVftqYcO20T+I=,tag:zgim7r2UUbFR0faGqdJq6w==,type:str]
+secretConfigEnvs:
+    SECRET_A: ENC[AES256_GCM,data:xB9yTyw6czZHR0zidw==,iv:GqQZEzekrdeP/OS6ifP+5oio6sn8gCXa8OO5Ni3Ks8I=,tag:zNIGHNPjXeD6fnKomLajRQ==,type:str]
+    SECRET_B: ENC[AES256_GCM,data:PECz70CxZd1Z2EMggA==,iv:5MZGhySfYCRqEo36JkYIFbrh8iJT+bn4eYPPPJtOMZQ=,tag:fpg1H2RU2DU8vEljXz7WjQ==,type:str]
+secretConfigFiles:
+    secret.txt: ENC[AES256_GCM,data:lxbfpbekuZX/pBw72B3YDA==,iv:tYeQuOVuc65z2IK9ht3w2Fj0qUZTZYR4AjU1R77FmEM=,tag:3lQOB9vH0yK7wigZA+07qQ==,type:str]
+    secret.json: ENC[AES256_GCM,data:5laF4HUTx1eLRupPMd/7vbyu2gVMU6cCEqXGfFDDBQZV,iv:c+QhsbW0YXp5hu32cWZmafmKKxP5ZRe8YankEOrY6lo=,tag:FrLTnLIzC8jYex3ijScw7w==,type:str]
 sops:
     kms: []
     gcp_kms:
         - resource_id: projects/gomod-0/locations/europe-central2/keyRings/sops/cryptoKeys/sops-key
-          created_at: "2022-08-30T10:29:33Z"
-          enc: CiQAalnlFrzriLVRkNeWieMrFc4ExIDOlxWeewdVTV+KUl+MgjwSSQCoyb//QBMfi7YekmKSEglr1nv9/7+6N6aZSoFmdTNXgGnXpoH7oEPyW0M5yM/XAgXXeVoAKUUVMec1yvTkCb0i8pOqZXMELX0=
+          created_at: "2022-08-31T04:56:10Z"
+          enc: CiQAalnlFqexIrc/LLuhW3dLZa91rSnG2PyySrD/9yvdeQL4vqISSQCoyb//Kcaac5uf2e2/4xkQ0rKWmKIiE+UXl6vm45fdr8ZjAeBfpXzS6POU4+e747DBXi5RkHO4KAgNmhnBuX4CR7+bfTWwHTk=
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-08-30T10:29:33Z"
-    mac: ENC[AES256_GCM,data:H7YNpVKNpQgQh1iL6HCLWb5lm8r4UjMJBwu4B8yqMy4GlonMpwS1+tJ+mA/G34+/RtXerl03dDk1y7OY+snZ+8ivd5VkUilFhzJZEU635ccY6MICLnAC8++MtjJNt5KGqAgHI5TRGqYyKljOY06C/R8+wn+xMaPMFMBJZqW1dyk=,iv:A6MjA49KOZB6JKBp1xGeCSSQj67LAQhHmvfZFnqM5sA=,tag:8fbfyITlgjy5f3ENFNsZNw==,type:str]
+    lastmodified: "2022-08-31T04:56:11Z"
+    mac: ENC[AES256_GCM,data:EUPFRhkZ3PpsAhf9lBWkbut7c9Ywy5TRg17mKnTZ4RNRHYACv58Tc+wEaya9+03S4pcT0CQZ1PLx4zxCRNXovjXnbdhd5LF5OLp7bJL22PkBNjaKkYfkJal6x/4Lg5TF00/G3T21Q+HlSsNaJQBAZyPoJXEhFqnQug1FQInkFt4=,iv:DluqD6wpjhfNGEjH77p1O0mBcffQtcvCHJhEu9t9Bcc=,tag:8GEkG/RxYMAT32FlYWIsRA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
