--- a/deploy/releases/goapp-dev/values.yaml
+++ b/deploy/releases/goapp-dev/values.yaml
@@ -1,7 +1,7 @@
 configEnvs:
   CONFIG_A: dev CONFIG_A
   CONFIG_B: dev CONFIG_B
-secretEnvs:
+secretConfigEnvs:
   SECRET_A: dev SECRET_A
   SECRET_B: dev SECRET_B
 configFiles:
@@ -11,7 +11,7 @@ configFiles:
     {
       "data": "dev config.json"
     }
-secretFiles:
+secretConfigFiles:
   secret.txt: |
     dev secret.txt
   secret.json: |
