--- a/.sops.yaml
+++ b/.sops.yaml
@@ -1,2 +1,3 @@
 creation_rules:
   - gcp_kms: projects/gomod-0/locations/europe-central2/keyRings/sops/cryptoKeys/sops-key
+    path_regex: secrets\.(dec|enc)\.yaml$
