use .dec.* extension for SOPS secrets

--- a/.dockerignore
+++ b/.dockerignore
@@ -38,6 +38,18 @@
 **/gha-creds-*.json
 
 #############################
+### SOPS
+#############################
+
+.sops.yaml
+
+# decrypted secrets
+**/*.dec.env
+**/*.dec.json
+**/*.dec.txt
+**/*.dec.yaml
+
+#############################
 ### Docker
 #############################
 
