--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,11 @@ gha-creds-*.json
 ### SOPS
 #############################
 
-/deploy/goapp/overlays/prod/secret.env
-/deploy/goapp/overlays/prod/secret.json
-/deploy/goapp/overlays/prod/secret.txt
+# decrypted secrets
+*.dec.env
+*.dec.json
+*.dec.txt
+*.dec.yaml
 
 #############################
 ### Docker
