--- a/.dockerignore
+++ b/.dockerignore
@@ -38,6 +38,15 @@
 **/gha-creds-*.json
 
 #############################
+### SOPS
+#############################
+
+.sops.yaml
+
+# decrypted secrets
+**/secrets.dec.yaml
+
+#############################
 ### Docker
 #############################
 
