--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ gha-creds-*.json
 ### SOPS
 #############################
 
+# decrypted secrets
 secrets.dec.yaml
 
 #############################
