--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -27,9 +27,9 @@ profiles:
         releases:
           - name: goapp-dev
             namespace: default
-            chartPath: deploy/charts/goapp
+            chartPath: deploy/goapp
             valuesFiles:
-              - deploy/releases/goapp-dev/values.yaml
+              - deploy/goapp/releases/goapp-dev/values.yaml
             artifactOverrides:
               image: goapp
             imageStrategy:
@@ -44,16 +44,25 @@ profiles:
         releases:
           - name: goapp-prod
             namespace: default
-            chartPath: deploy/charts/goapp
+            chartPath: deploy/goapp
             valuesFiles:
-              - deploy/releases/goapp-prod/values.yaml
-              - deploy/releases/goapp-prod/secrets.dec.yaml
+              - deploy/goapp/releases/goapp-prod/values.yaml
+              - deploy/goapp/releases/goapp-prod/secrets.dec.yaml
             artifactOverrides:
               image: goapp
             imageStrategy:
               helm: {}
         hooks:
           before:
-            - host: { command: ["scripts/sops/decrypt.sh"] }
+            - host:
+                command:
+                  - sops
+                  - --decrypt
+                  - --output=deploy/goapp/releases/goapp-prod/secrets.dec.yaml
+                  - deploy/goapp/releases/goapp-prod/secrets.enc.yaml
           after:
-            - host: { command: ["scripts/sops/rm-decrypted.sh"] }
+            - host:
+                command:
+                  - rm
+                  - -f
+                  - deploy/goapp/releases/goapp-prod/secrets.dec.yaml
