--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -68,6 +68,9 @@ jobs:
       - name: Test Docker images
         if: github.event_name == 'pull_request'
         run: skaffold test --profile=dev --build-artifacts=skaffold-build-artifacts.json
+      - name: Lint Helm chart
+        if: github.event_name == 'pull_request'
+        run: helm lint deploy/goapp
 
       - name: Deploy to prod
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
